Nightmode should turn on automatically(this is more of a hack of the function toggleNight()) now at 8pm & turn off around 7am. #curConditions & .forecastBlock have background rgba now(might make it configurable), just in case the background colors of images doesn't contrast with white characters. changed up some other CSS tags so the top and bottom line up correctly.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -24,7 +24,8 @@
 
 #curConditions {
 	height: 33vh;
-	margin-top: 10px;
+	border: 2px solid rgb( 16, 16, 16);
+	background: rgba( 16, 16, 16, 0.5);
 }
 
 #curIcon {
@@ -41,7 +42,7 @@
 
 #curTemp {
 	font-size: 5vh;
-	font-family: 'Orbitron'; 
+	font-family: 'Orbitron', serif;
 }
 
 #curHum {
@@ -61,11 +62,11 @@
 }
 
 #rdrRegional {
-	height: 33vh;
+	height: 33.3vh;
 }
 
 #rdrLocal {
-	height: 33vh;
+	height: 33.3vh;
 }
 
 #date {
@@ -76,7 +77,7 @@
 #time {
 	height: 60vh; 
 	font-size: 20vh; 
-	font-family: 'Orbitron'; 
+	font-family: 'Orbitron', serif;
 	line-height: 60vh;
 	overflow: hidden
 }
@@ -102,13 +103,14 @@
 .forecastBlock {
 	display: inline-block;
 	width: 100%;
-	border: 2px solid;
-	height: 10.3vh;
+	height: 10.74vh;
 	overflow: hidden;
+	border: 2px solid rgb( 16, 16, 16);
+	background: rgba( 16, 16, 16, 0.5);
 }
 
 .forecastTemp {
-	font-family: orbitron;
+	font-family: orbitron, serif;
 }
 
 .forecastImage {
