--- a/public/css/weather-icons.css
+++ b/public/css/weather-icons.css
@@ -31,7 +31,6 @@
   font-family: 'weathericons';
   font-style: normal;
   font-weight: normal;
-  line-height: 1;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
